<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/write">

    <cn.xll.com.ui.widget.TitleBarView
        android:id="@+id/title_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#efefef"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                style="@style/FontStyleNormalBlackMid"
                android:id="@+id/et_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:hint="@string/old_password_alert"
                android:textColorHint="@color/grey_low_2"
                android:background="@drawable/bg_gray_slide"
                android:singleLine="true"
                android:inputType="date"
                android:maxLength="20"/>
            <EditText
                style="@style/FontStyleNormalBlackMid"
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:hint="@string/hint_password"
                android:textColorHint="@color/grey_low_2"
                android:background="@drawable/bg_gray_slide"
                android:singleLine="true"
                android:inputType="date"
                android:maxLength="20"/>
            <EditText
                style="@style/FontStyleNormalBlackMid"
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:hint="@string/hint_confirm_password"
                android:textColorHint="@color/grey_low_2"
                android:background="@drawable/bg_gray_slide"
                android:singleLine="true"
                android:inputType="date"
                android:maxLength="20"/>

            <TextView
                android:id="@+id/tv_reset_password_confim"
                style="@style/FontStyleNormalWhiteMid"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/confirm"
                android:background="@drawable/select_login_ensure"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>