<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/write">
    <cn.xll.com.ui.widget.TitleBarView
        android:id="@+id/title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_login"
        android:paddingRight="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_20"
        android:paddingTop="12.5dp">
        <LinearLayout
            android:id="@+id/layout_01"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_43"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/bg_gray_slide"
            android:visibility="gone">
            <TextView
                android:layout_width="@dimen/dp_80"
                android:layout_height="wrap_content"
                android:textColor="@color/black_low_1"
                android:textSize="16sp"
                android:text="代码"/>
            <EditText
                android:id="@+id/tv_login_code"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColorHint="@color/grey_low_2"
                android:textColor="@color/black_low_5"
                android:hint="@string/str_login_code_hint"
                android:background="@null"
                android:singleLine="true"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_02"
            android:layout_below="@+id/layout_01"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_43"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/bg_gray_slide">
            <TextView
                android:layout_width="@dimen/dp_80"
                android:layout_height="wrap_content"
                android:textColor="@color/black_low_1"
                android:textSize="16sp"
                android:text="账号"/>
            <EditText
                android:id="@+id/tv_login_username"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColorHint="@color/grey_low_2"
                android:textColor="@color/black_low_5"
                android:hint="@string/str_login_username_hint"
                android:singleLine="true"
                android:background="@null"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_03"
            android:layout_below="@+id/layout_02"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_43"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/bg_gray_slide">
            <TextView
                android:layout_width="@dimen/dp_80"
                android:layout_height="wrap_content"
                android:textColor="@color/black_low_1"
                android:textSize="16sp"
                android:text="登录密码"/>
            <EditText
                android:id="@+id/tv_login_pwd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColorHint="@color/grey_low_2"
                android:textColor="@color/black_low_5"
                android:singleLine="true"
                android:hint="@string/str_login_pwd_hint"
                android:inputType="textPassword"
                android:background="@null"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/rl_find_pwd"
            android:layout_below="@+id/layout_03"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="@dimen/dp_40"
            android:visibility="gone">
            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_low_2"
                android:textSize="13sp"
                android:text="找回密码"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_43"
            android:layout_below="@+id/layout_03"
            android:textColor="@color/write"
            android:textSize="14sp"
            android:gravity="center"
            android:text="确定"
            android:layout_marginTop="@dimen/dp_53"
            android:background="@drawable/select_login_ensure"/>
    </RelativeLayout>
</RelativeLayout>
